--- a/index.html
+++ b/index.html
@@ -33,12 +33,11 @@
                 </div>
                 <div class="nav-button">
                     <a href="download.html">
-                        <button class="btn">Download CV <i class="uil uil-file-alt"></i></button>
+                        <button class="btn" id="dont">Download CV <i class="uil uil-file-alt"></i></button>
                     </a href="download.html">
                 </div>
                 <div class="menu-btn">
                     <i class="uil uil-bars" onclick="corncharf()" id="menuc"></i></div>
-                <img src="moon.png" alt="" id="icon">
             
                 </nav>
 
@@ -104,8 +103,8 @@
                               </P>
                               <div class="about-btn">
                                   <a href="download.html">
-                                    <button class="btn" onclick="download()">Download CV <i class="uil uil-file-alt"></i></button>
-                                  </a href="">
+                                    <button class="btn" onclick="download()">Download CV<i class="uil uil-file-alt"></i></button>
+                              </a>
                               </div>
                         
                           </div>
