--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </a href="download.html">
                 </div>
                 <div class="menu-btn">
-                    <i class="uil uil-bars" onclick="corncharf()" id="menuc"></i></div>
+                  <i class="uil uil-bars" onclick="move()" hidden id="cross"></i>  <i class="uil uil-bars" onclick="corncharf()" id="menuc"></i></div>
             
                 </nav>
 
