--- a/index.html
+++ b/index.html
@@ -4,15 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://www.momentcrm.com/embed"></script>
-<script>
-  MomentCRM('init', {
-    'teamVanityId': 'web-designer',
-    'doChat': true,
-    'doTimeTravel': true,
-    'quadClickForFeedback': true,
-  });
-</script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" type="text/css" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -249,6 +240,15 @@
       <script src="https://unpkg.com/scrollreveal"></script>
       <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
     <script src="script.js"></script>
+    <script src="https://www.momentcrm.com/embed"></script>
+    <script>
+      MomentCRM('init', {
+        'teamVanityId': 'web-designer',
+        'doChat': true,
+        'doTimeTravel': false,
+        'quadClickForFeedback': true,
+      });
+    </script>
 </body>
 
 </html>
