--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <div class="nav-bar">
             <nav id="nav-header">
                 <div class="namee">
-                    <h1 id="headman">Amblessed</h1><span>.</span>
+                    
+                    <h1 id="headman"><img src="logo - Copy (2).png" alt="logo">Amblessed</h1><span>.</span>
                 </div>
                 <div class="nav-links" id="naviga">
                     <ul class="nav-list">
